# fatelf

./: CMakeLists.txt  fatelf.conf.in
.github/workflows/: main.yml
utils/: fatelf-exec-openbsd.c  fatelf-exec.c  fatelf-glue.c  fatelf-utils.c  fatelf-utils.h
